Tested consumers and set up Airflow

--- a/real-time-data-lake/notebooks/kafka_api.ipynb
+++ b/real-time-data-lake/notebooks/kafka_api.ipynb
@@ -54,6 +54,15 @@
       "%3|1727427136.170|FAIL|rdkafka#producer-4| [thrd:jf-hp:9092/0]: jf-hp:9092/0: Failed to connect to broker at [jf-hp]:9092: Invalid argument (after 0ms in state CONNECT)\n",
       "%3|1727427137.172|FAIL|rdkafka#producer-4| [thrd:jf-hp:9092/0]: jf-hp:9092/0: Failed to connect to broker at [jf-hp]:9092: Invalid argument (after 1ms in state CONNECT, 1 identical error(s) suppressed)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "%5|1727429296.232|REQTMOUT|rdkafka#producer-4| [thrd:jf-hp:9092/0]: jf-hp:9092/0: Timed out MetadataRequest in flight (after 60054ms, timeout #0)\n",
+      "%4|1727429296.232|REQTMOUT|rdkafka#producer-4| [thrd:jf-hp:9092/0]: jf-hp:9092/0: Timed out 1 in-flight, 0 retry-queued, 0 out-queue, 0 partially-sent requests\n",
+      "%3|1727429296.232|FAIL|rdkafka#producer-4| [thrd:jf-hp:9092/0]: jf-hp:9092/0: 1 request(s) timed out: disconnect (average rtt 1.223ms) (after 2158846ms in state UP)\n"
+     ]
     }
    ],
    "source": [
@@ -74,6 +83,58 @@
     "    producer.flush()\n",
     "else:\n",
     "    print(f\"Error: {response.status_code}, {response.text}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 429, {\n",
+      "  \"title\": \"Forbidden\",\n",
+      "  \"status\": 429,\n",
+      "  \"detail\": \"Quota exceeded: REST API Requests per day.\",\n",
+      "  \"error\": \"Forbidden (Quota exceeded: REST API Requests per day.)\",\n",
+      "  \"QuotaKey\": \"CAPI_DTA_REST_REQ_QUOTA_DAILY\",\n",
+      "  \"QuotaName\": \"REST API Requests per day\",\n",
+      "  \"QuotaType\": \"Quota\",\n",
+      "  \"QuotaValueCurrentUsage\": 155,\n",
+      "  \"QuotaValue\": 100,\n",
+      "  \"QuotaValueUnit\": \"Credits\",\n",
+      "  \"QuotaValueAdjustable\": \"Yes, upgrade subscription or enable pay-as-you-go billing above the organizaiton quota.\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from confluent_kafka import Producer\n",
+    "import json\n",
+    "\n",
+    "# Replace 'YOUR_API_KEY' with your actual CoinAPI key\n",
+    "headers = {'X-CoinAPI-Key': '8e64a7e8-441f-44ee-95a7-a80d00d494f1'}\n",
+    "\n",
+    "# Kafka producer setup\n",
+    "producer = Producer({'bootstrap.servers': 'localhost:9092'})\n",
+    "\n",
+    "def fetch_ohlcv_data():\n",
+    "    # Endpoint for latest OHLCV data for a specific symbol (e.g., BTC/USD)\n",
+    "    response = requests.get('https://rest.coinapi.io/v1/ohlcv/BITSTAMP_SPOT_BTC_USD/latest', headers=headers)\n",
+    "    \n",
+    "    # Check for a valid response\n",
+    "    if response.status_code == 200:\n",
+    "        data = response.json()\n",
+    "        producer.produce('ohlcv-data', value=json.dumps(data))\n",
+    "        producer.flush()\n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code}, {response.text}\")\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fetch_ohlcv_data()\n"
    ]
   }
  ],
